# paradox-patch

./: .gitignore  Cargo.toml  Justfile  README.md
paradox-patch/: Cargo.toml
paradox-patch-cli/: Cargo.toml
paradox-patch-cli/src/: main.rs
paradox-patch-gui/: Cargo.toml
paradox-patch-gui/src/: main.rs
paradox-patch/src/: dlc.rs  error.rs  lib.rs  patch.rs
src/: dlc.rs  lib.rs  main.rs  patch.rs
tests/: pgo.rs
