[package]
name = "steam-dlc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.22", features = ["derive", "unstable-v4"] }
clap-verbosity-flag = "1.0.1"
color-eyre = "0.6.2"
futures = "0.3.24"
reqwest = { version = "0.11.12", features = ["json"] }
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
tokio = { version = "1.21.1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.36"
tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }

[profile.release]
lto = true
codegen-units = 1
