[package]
name = "steam-dlc"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.2", features = ["derive"] }
clap-verbosity-flag = "2.0.0"
color-eyre = "0.6.2"
env_logger = "0.9.1"
log = "0.4.17"

[profile.release]
lto = true
codegen-units = 1
