[package]
name = "paradox-patch"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.2", features = ["derive"] }
clap-verbosity-flag = "2.0.0"
color-eyre = "0.6.2"
reqwest = { version = "0.11.12", features = ["blocking"] }
tracing = "0.1.37"
tracing-log = "0.1.3"
tracing-subscriber = "0.3.16"

[profile.release]
lto = true
codegen-units = 1
