[package]
name = "paradox-patch-cli"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.0", features = ["derive"] }
clap-verbosity-flag = "2.0.1"
tracing = "0.1.37"
tracing-log = "0.1.3"
tracing-subscriber = "0.3.17"
paradox-patch = { version = "0.2.0", path = "../paradox-patch" }
miette = { version = "5.9.0", features = ["fancy"] }

[[bin]]
name = "paradox-patch"
path = "src/main.rs"
