[package]
name = "paradox-patch"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bstr = "1.0.1"
miette = "5.4.1"
reqwest = { version = "0.11.12", features = ["blocking"] }
thiserror = "1.0.37"
tracing = "0.1.37"
